--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -124,7 +124,7 @@ style.
 	.post
 		height 100%
 		overflow auto
-		padding 6em 0
+		padding 2em
 		&::-webkit-scrollbar
 			display none
 	.post-content
@@ -143,6 +143,8 @@ style.
 		font-size 0.75em
 		padding-top 0.5em
 		text-align center
+	.post-header
+		max-width 640px
 	.post-iframe
 		aspect-ratio 16 / 9
 		max-width 100%
