--- a/src/ui/product/subreddit/Wiki.pug
+++ b/src/ui/product/subreddit/Wiki.pug
@@ -25,7 +25,8 @@ svelte:head
 
 style.
 	.wiki-page
-		padding 6em 0
+		margin-left 320px
+		padding 6em
 	.wiki-page-body
 		margin-top 3em
 		position relative
@@ -41,7 +42,6 @@ style.
 	:global(.wiki-page img)
 		max-width 100%
 	:global(.wiki-page .toc)
-		box-sizing border-box
 		font-size 12px
 		line-height 1
 		max-height 100vh
