--- a/src/ui/infra/AccountSwitcher.pug
+++ b/src/ui/infra/AccountSwitcher.pug
@@ -1,6 +1,6 @@
 script.
-	import Button from '../controls/Button.pug'
-	import api from '../../../api/index.js'
+	import Button from '../product/controls/Button.pug'
+	import api from '../../api/index.js'
 	status = api.getLoginStatus()
 
 {#if status === 'logged-in'}
