--- a/src/ui/infra/NotImplemented.pug
+++ b/src/ui/infra/NotImplemented.pug
@@ -1,20 +1,28 @@
 script.
 	export route = null
 
-h1 The requested page is not supported yet.
-dl
-	dt Page type:
-	dd {route.path}
-	dt Data:
-	dd
-		{#if route.data === null}
-			| [null]
-		{:else}
-			dl
-				{#each Object.keys(route.data) as key}
-					dt {key}:
-					dd {route.data[key]}
+.not-implemented
+	h1 The requested page is not supported yet.
+	dl
+		dt Page type:
+		dd {route.path}
+		dt Data:
+		dd
+			{#if route.data === null}
+				| [null]
+			{:else}
+				dl
+					{#each Object.keys(route.data) as key}
+						dt {key}:
+						dd {route.data[key]}
 
 style.
+	.not-implemented
+		align-items center
+		display flex
+		flex-flow column nowrap
+		height 100%
+		justify-content center
+		width 100%
 	dd
 		font-weight bold
