--- a/src/ui/infra/PageUnavailable.pug
+++ b/src/ui/infra/PageUnavailable.pug
@@ -9,7 +9,9 @@ script.
 
 style.
 	.page-unavailable
+		align-items center
 		display flex
 		flex-flow column nowrap
 		height 100%
 		justify-content center
+		width 100%
