--- a/src/ui/product/subreddit/Subreddit.pug
+++ b/src/ui/product/subreddit/Subreddit.pug
@@ -26,8 +26,9 @@ svelte:head
 
 style.
 	.subreddit-nav
-		left 16vw
-		padding 6em 0
-		position fixed
-		top 0
-		width 17vw
+		height 100%
+		overflow-y auto
+		padding 2em
+		width 20vw
+		&::-webkit-scrollbar
+			display none
