--- a/src/ui/product/post/Comment.pug
+++ b/src/ui/product/post/Comment.pug
@@ -4,11 +4,11 @@ script.
 	import Button from '../controls/Button.pug'
 	import Markup from '../text/Markup.pug'
 	import Score from './Score.pug'
-	export id = null
 	export outOfContext = false
+	export shortId = null
 	collapsed = false
 	comment = null
-	api.watch(id, (x) -> { data: comment } = x)
+	api.watch(api.ID.dataset('comment', shortId), (x) -> { data: comment } = x)
 
 {#if comment}
 	<!-- 'comment' role is draft status and not recognized yet -->
@@ -16,7 +16,7 @@ script.
 	article.comment(role='comment')
 		.comment-layout-indent
 			.comment-layout-score
-				Score(uploadVote={(vote) => api.send(api.ID.action('vote_comment', api.ID.body(id)[0], vote))} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
+				Score(uploadVote={(vote) => api.send(api.ID.action('vote_comment', shortId, vote))} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
 			button.comment-line-separator(on:mousedown={() => collapsed = !collapsed})
 		.comment-layout-core
 			{#if collapsed}
@@ -27,8 +27,8 @@ script.
 				{#if !outOfContext && comment.replies.length > 0}
 					{#key comment.replies}
 						ol.comment-replies
-							{#each comment.replies as replyId}
-								svelte:self(id={replyId})
+							{#each comment.replies as replyShortId}
+								svelte:self(shortId={replyShortId})
 							{#if comment.more_replies}
 								.comment-more-replies
 									Button(action={() => api.load(comment.more_replies_id)} appearance='text' text="+ {comment.more_replies.length} more {comment.more_replies.length === 1 ? 'reply' : 'replies'}...")
@@ -37,7 +37,7 @@ script.
 									Button(appearance='text' text='→ Continue this thread...')
 		{#if outOfContext}
 			.comment-layout-links
-				Button(link='/post/{api.ID.body(comment.parent_post)[0]}/comment/{api.ID.body(id)[0]}' text='View in post')
+				Button(link='/post/{comment.link_id.slice(3)}/comment/{shortId}' text='View in post')
 
 style.
 	.comment
