--- a/src/ui/product/listing/PostListItem.pug
+++ b/src/ui/product/listing/PostListItem.pug
@@ -3,16 +3,16 @@ script.
 	import Flair from '../post/Flair.pug'
 	import Score from '../post/Score.pug'
 	import api from '../../../api/index.js'
-	export id = null
 	export multireddit = false
 	export select = null
+	export shortId = null
 	post = null
-	api.watch(id, (x) -> { data: post } = x)
+	api.watch(api.ID.dataset('post', shortId), (x) -> { data: post } = x)
 
-button.post-card(on:mousedown={() => select(id)})
+button.post-card(on:mousedown={() => select(shortId)})
 	.post-headline-layout
 		.post-headline-layout-indent
-			Score(uploadVote={(vote) => api.send(api.ID.action('vote_post', api.ID.body(id)[0], vote))} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
+			Score(uploadVote={(vote) => api.send(api.ID.action('vote_post', shortId, vote))} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
 		.post-headline-layout-core
 			.post-meta
 				.post-flair
