--- a/src/ui/product/user/User.pug
+++ b/src/ui/product/user/User.pug
@@ -8,21 +8,21 @@ script.
 	export user_name = null
 	error = null
 	info = null
-	commentIds = null
-	postIds = null
+	commentShortIds = null
+	postShortIds = null
 	api.watch(api.ID.dataset('user', user_name), (x) -> { data: info, error: error } = x)
 	switch items_filter
 		when 'comments'
-			api.watch(api.ID.dataset('user_comments', user_name, items_sort, 10), (x) -> { data: commentIds } = x)
+			api.watch(api.ID.dataset('user_comments', user_name, items_sort, 10), (x) -> { data: commentShortIds } = x)
 		else
-			api.watch(api.ID.dataset('user_posts', user_name, items_sort, 10), (x) -> { data: postIds } = x)
+			api.watch(api.ID.dataset('user_posts', user_name, items_sort, 10), (x) -> { data: postShortIds } = x)
 
 svelte:head
 	title user: {user_name}: {items_filter}
 {#if error}
 	{#if error instanceof api.errors.ServerError}
 		PageUnavailable(path='/u/{user_name}')
-{:else if postIds}
-	PostList(ids={postIds})
-{:else if commentIds}
-	CommentList(ids={commentIds})
+{:else if postShortIds}
+	PostList(shortIds={postShortIds})
+{:else if commentShortIds}
+	CommentList(shortIds={commentShortIds})
